--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>SMC App</title>
+    <link rel="icon" type="image/x-icon" href="./logo.svg" />
+    <title>Diverse | Lets get diverse</title>
   </head>
   <body>
     <div id="root"></div>
